--- a/tour1--step2.html
+++ b/tour1--step2.html
@@ -21,7 +21,7 @@
         <tr>
 
             <td width="640">
-                <form>
+                <form action="thankyou.html" >
                     <fieldset>
                         <legend>
                             Personal data
@@ -30,19 +30,59 @@
                         <label>
                             Your full name:
                             <input type="text" 
-                            size="60">
+                            size="60" required>
                         </label>
+                    </br></br>
 
-                        <label for="">
+                        <label >
                             Phone
-                            <select name="" id="">
+                            <select >
                                 <option value="Moldova">+373</option>
                                 <option value="Turkey">+90 </option>
                                 <option value="Germany">+49</option>
                             </select>
-                            <input type="number" maxlength="8">
+                            <input type="number" min="0" max="999999999" required>
+                        </label>
+                        </br></br>
+
+                        <label>
+                            Address
+                            <select>
+                                <option>Moldova</option>
+                                <option>Turkey</option>
+                                <option>Germany</option>
+
+
+                            </select>
+                        </label>
+
+                        <label>
+                            City
+                            <select>
+                                <option>Chisinau</option>
+                                <option>Istambul</option>
+                                <option>Heidelberg</option>
+                            </select>
                         </label>
                     </fieldset>
+
+                    <fieldset>
+                        <legend>
+                            Transportation
+                        </legend>
+
+                        <label>
+                            Choose type: 
+                            <input type="radio" name="transportation"> Bus
+                            <input type="radio" name="transportation"> Car
+                            <input type="radio" name="transportation"> Train
+                            <input type="radio" name="transportation"> Ship
+                            <input type="radio" name="transportation"> Plane
+                        </label>
+                    </fieldset>
+
+                </hr>
+                <button>Next <img src="images/Simpleicons-Team-Simple-Pluralsight.64.png" alt=""></button>
                     
 
                 </form>
