coloured thankyou page

--- a/tour1--step2.html
+++ b/tour1--step2.html
@@ -12,7 +12,7 @@
 
         <tr>
             <td width="640">
-                <h1>Medieval Cathedral</h1>         
+                <h1 align="center">Medieval Cathedral</h1>         
                     <img src="images/cathedral-6830526_640.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis tenetur saepe culpa, itaque unde
                         alias consequatur assumenda. Suscipit, iusto beatae?</p>
@@ -30,7 +30,7 @@
                         <label>
                             Your full name:
                             <input type="text" 
-                            size="60" required>
+                            size="60">
                         </label>
                     </br></br>
 
@@ -41,7 +41,7 @@
                                 <option value="Turkey">+90 </option>
                                 <option value="Germany">+49</option>
                             </select>
-                            <input type="number" min="0" max="999999999" required>
+                            <input type="number" min="0" max="999999999">
                         </label>
                         </br></br>
 
@@ -82,7 +82,16 @@
                     </fieldset>
 
                 </hr>
-                <button>Next <img src="images/Simpleicons-Team-Simple-Pluralsight.64.png" alt=""></button>
+                </hr>
+                <p align="center"> 
+                    <button formaction="/index.html"> 
+                            <img src="images/Graphicrating-Koloria-Button-Back.32.png" alt="back button">
+                    </button>
+
+                    <button> 
+                            <img src="images/Graphicrating-Koloria-Button-Next.32.png" alt="next button">
+                    </button>
+                </p>
                     
 
                 </form>
